spacing issues

--- a/style.css
+++ b/style.css
@@ -286,18 +286,22 @@ nav {
 
 .developer {
     margin-bottom: 2em;
-    
-    text-align: center;
+    text-align: left;
+}
+
+.about-heading {
+    align-self: center;
+    color: var(--clr-bright);
 }
 
 .icon-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr;
-    grid-gap: 1em;
-    width: 500px;
-    margin: 0 2em;
-    padding: 1em 2em;
+    grid-gap: .75em;
+    width: 475px;
+    margin: 1em 2em;
+    padding: 1em 3em;
     place-items: center;
 }
 
@@ -305,13 +309,13 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    margin-top: 3em;
 }
 
 @media (min-width: 800px) {
     .about {
         flex-direction: row;
-        justify-content: center;
+        align-items: flex-start;
     }
 
     .developer {
@@ -325,7 +329,6 @@ nav {
 
     .about-section-subtitle {
         margin: 0;
-        
     }
 
     .about-child + .about-child {
@@ -411,7 +414,7 @@ nav {
 
 
 footer {
-    padding-top: 5em;
+    padding: 5em 2em 1em;
     text-align: center;
     font-size: var(--fs-h3);
     color: var(--clr-accent);
